--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+#root {
+  
+}
+
+
 body {
   width: 100%;
   height: 100%;
@@ -6,3 +11,4 @@ body {
   font-family: 'Inclusive Sans', sans-serif;
   background-color: #0c0c0d;
 }
+
